<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260821064047 extends AbstractMigration
{
    public function getDescription(): string
    {
        return 'Schéma initial Ti Baleine V1 : utilisateurs, sorties, réservations, paiements, documents et notifications.';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE bateau (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, nom VARCHAR(100) NOT NULL, capacite INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_bateau_nom ON bateau (nom)');
        $this->addSql('CREATE TABLE document (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(255) NOT NULL, reference VARCHAR(80) NOT NULL, date_emission TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_D8698A76AEA34913 ON document (reference)');
        $this->addSql('CREATE TABLE notification (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(255) NOT NULL, canal VARCHAR(255) NOT NULL, date_envoi TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, contenu VARCHAR(1000) DEFAULT NULL, utilisateur_id INT DEFAULT NULL, reservation_id INT DEFAULT NULL, sortie_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_BF5476CAFB88E14F ON notification (utilisateur_id)');
        $this->addSql('CREATE INDEX IDX_BF5476CAB83297E7 ON notification (reservation_id)');
        $this->addSql('CREATE INDEX IDX_BF5476CACC72D953 ON notification (sortie_id)');
        $this->addSql('CREATE TABLE paiement (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(255) NOT NULL, montant NUMERIC(10, 2) NOT NULL, canal VARCHAR(255) NOT NULL, statut VARCHAR(255) NOT NULL, reference_externe VARCHAR(120) DEFAULT NULL, date_initiation TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, date_confirmation TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, reservation_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_B1DC7A1E359AB8C6 ON paiement (reference_externe)');
        $this->addSql('CREATE INDEX IDX_B1DC7A1EB83297E7 ON paiement (reservation_id)');
        $this->addSql('CREATE TABLE reservation (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, etat VARCHAR(255) NOT NULL, statut_paiement VARCHAR(255) NOT NULL, motif_annulation VARCHAR(500) DEFAULT NULL, montant_initial NUMERIC(10, 2) NOT NULL, montant_courant NUMERIC(10, 2) NOT NULL, acompte NUMERIC(10, 2) NOT NULL, solde NUMERIC(10, 2) NOT NULL, nb_adultes INT NOT NULL, nb_enfants INT NOT NULL, utilisateur_id INT NOT NULL, sortie_id INT NOT NULL, document_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_42C84955FB88E14F ON reservation (utilisateur_id)');
        $this->addSql('CREATE INDEX IDX_42C84955CC72D953 ON reservation (sortie_id)');
        $this->addSql('CREATE INDEX IDX_42C84955C33F7837 ON reservation (document_id)');
        $this->addSql('CREATE INDEX idx_reservation_etat ON reservation (etat)');
        $this->addSql('CREATE TABLE sortie (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(255) NOT NULL, date DATE NOT NULL, heure_depart TIME(0) WITHOUT TIME ZONE NOT NULL, duree TIME(0) WITHOUT TIME ZONE NOT NULL, etat VARCHAR(255) NOT NULL, bateau_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_3C3FD3F2A9706509 ON sortie (bateau_id)');
        $this->addSql('CREATE INDEX idx_sortie_date ON sortie (date)');
        $this->addSql('CREATE UNIQUE INDEX uniq_sortie_creneau_bateau ON sortie (date, heure_depart, bateau_id)');
        $this->addSql('CREATE TABLE tarif (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type_sortie VARCHAR(255) NOT NULL, categorie VARCHAR(20) DEFAULT NULL, montant NUMERIC(10, 2) NOT NULL, bateau_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_E7189C9A9706509 ON tarif (bateau_id)');
        $this->addSql('CREATE TABLE utilisateur (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, nom VARCHAR(100) NOT NULL, prenom VARCHAR(100) NOT NULL, email VARCHAR(180) NOT NULL, mot_de_passe VARCHAR(255) DEFAULT NULL, telephone VARCHAR(30) DEFAULT NULL, role VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_utilisateur_email ON utilisateur (email)');
        $this->addSql('CREATE TABLE messenger_messages (id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL, body TEXT NOT NULL, headers TEXT NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, available_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, delivered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750 ON messenger_messages (queue_name, available_at, delivered_at, id)');
        $this->addSql('ALTER TABLE notification ADD CONSTRAINT FK_BF5476CAFB88E14F FOREIGN KEY (utilisateur_id) REFERENCES utilisateur (id)');
        $this->addSql('ALTER TABLE notification ADD CONSTRAINT FK_BF5476CAB83297E7 FOREIGN KEY (reservation_id) REFERENCES reservation (id)');
        $this->addSql('ALTER TABLE notification ADD CONSTRAINT FK_BF5476CACC72D953 FOREIGN KEY (sortie_id) REFERENCES sortie (id)');
        $this->addSql('ALTER TABLE paiement ADD CONSTRAINT FK_B1DC7A1EB83297E7 FOREIGN KEY (reservation_id) REFERENCES reservation (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C84955FB88E14F FOREIGN KEY (utilisateur_id) REFERENCES utilisateur (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C84955CC72D953 FOREIGN KEY (sortie_id) REFERENCES sortie (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C84955C33F7837 FOREIGN KEY (document_id) REFERENCES document (id)');
        $this->addSql('ALTER TABLE sortie ADD CONSTRAINT FK_3C3FD3F2A9706509 FOREIGN KEY (bateau_id) REFERENCES bateau (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE tarif ADD CONSTRAINT FK_E7189C9A9706509 FOREIGN KEY (bateau_id) REFERENCES bateau (id)');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE notification DROP CONSTRAINT FK_BF5476CAFB88E14F');
        $this->addSql('ALTER TABLE notification DROP CONSTRAINT FK_BF5476CAB83297E7');
        $this->addSql('ALTER TABLE notification DROP CONSTRAINT FK_BF5476CACC72D953');
        $this->addSql('ALTER TABLE paiement DROP CONSTRAINT FK_B1DC7A1EB83297E7');
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C84955FB88E14F');
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C84955CC72D953');
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C84955C33F7837');
        $this->addSql('ALTER TABLE sortie DROP CONSTRAINT FK_3C3FD3F2A9706509');
        $this->addSql('ALTER TABLE tarif DROP CONSTRAINT FK_E7189C9A9706509');
        $this->addSql('DROP TABLE bateau');
        $this->addSql('DROP TABLE document');
        $this->addSql('DROP TABLE notification');
        $this->addSql('DROP TABLE paiement');
        $this->addSql('DROP TABLE reservation');
        $this->addSql('DROP TABLE sortie');
        $this->addSql('DROP TABLE tarif');
        $this->addSql('DROP TABLE utilisateur');
        $this->addSql('DROP TABLE messenger_messages');
    }
}
